[gd_scene load_steps=14 format=2]

[ext_resource path="res://objects/map_objects/WarperBody.gd" type="Script" id=1]
[ext_resource path="res://objects/textures/warper/warper_5.png" type="Texture" id=2]
[ext_resource path="res://objects/textures/warper/warper_7.png" type="Texture" id=3]
[ext_resource path="res://objects/textures/warper/warper_1.png" type="Texture" id=4]
[ext_resource path="res://objects/textures/warper/warper_2.png" type="Texture" id=5]
[ext_resource path="res://objects/textures/warper/warper_3.png" type="Texture" id=6]
[ext_resource path="res://objects/textures/warper/warper_8.png" type="Texture" id=7]
[ext_resource path="res://objects/textures/warper/warper_4.png" type="Texture" id=8]
[ext_resource path="res://objects/textures/warper/warper_6.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "opened",
"speed": 1.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 9 ) ],
"loop": false,
"name": "opening",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[node name="WarperBody" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 1 )

[node name="WarperCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )

[node name="WarperSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "closed"
playing = true

[node name="AnimationArea" type="Area2D" parent="."]
scale = Vector2( 7, 7 )

[node name="AnimationCollision" type="CollisionShape2D" parent="AnimationArea"]
shape = SubResource( 3 )

[node name="TeleportArea" type="Area2D" parent="."]

[node name="TeleportCollision" type="CollisionShape2D" parent="TeleportArea"]
shape = SubResource( 4 )
[connection signal="animation_finished" from="WarperSprite" to="." method="_on_opening_finished"]
[connection signal="body_entered" from="AnimationArea" to="." method="_on_player_animation_entered"]
[connection signal="body_exited" from="AnimationArea" to="." method="_on_player_animation_exited"]
[connection signal="body_entered" from="TeleportArea" to="." method="_on_player_entered"]
